Still getting some overflow. Fixed (with a band-aid)

--- a/app/static/styles/mainpage.css
+++ b/app/static/styles/mainpage.css
@@ -2,11 +2,18 @@ body {
   margin: 0;
 }
 
-h1, h2{
-  text-align: center;
-  color: #a80b2d;
-  font-weight: 400;
+html{
+  margin:0;
+  padding:0;
+  max-height:100vh;
+  overflow:hidden;
 }
+
+body {
+  background: rgba(1, 1, 1, 0);
+  height: 100%;
+}
+
 
 @media screen and (min-width: 0px) {
   body {
@@ -21,7 +28,7 @@ h1, h2{
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url("https://www.umsl.edu/new-home/files/images/tour-2023.jpg");
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     background-position: center;
     box-shadow: inset 0 0 10em 6em #000;
@@ -35,7 +42,7 @@ h1, h2{
     border-radius: 20px;
     padding: 30px;
     font-family: "Roboto Condensed", sans-serif;
-    height: 600px;
+    height: 550px;
     transition: height 1s;
   }
   .form-container img {
@@ -251,6 +258,40 @@ h1, h2{
     transition: 0.5s;
     font-weight: 600;
   }
+  .move {
+  justify-content: flex-start;
+}
+
+  .form-container-2{
+    animation: growAnimation 1.0s linear;
+    height: 800px;
+  }
+
+  @keyframes growAnimation {
+    0% {
+      height: 550px;
+    }
+    100% {
+      height: 800px;
+    }
+  }
+
+  /* Remove animation once completed and set size directly */
+  .form-container-2.done {
+    animation: none;
+    height: 800px;
+  }
+
+  .form-container-2.shrink {
+    height: 550px;
+  }
+
+  h1, h2{
+    text-align: center;
+    color: #a80b2d;
+    font-weight: 400;
+    line-height: 0.5em;
+  }
 }
 
 @media screen and (max-width: 920px) {
@@ -262,44 +303,3 @@ h1, h2{
     margin-left: 0;
   }
 }
-
-.move {
-  justify-content: flex-start;
-}
-
-.form-container-2{
-  animation: growAnimation 1.0s linear; /* Adjust duration and timing function as needed */
-  height: 1000px;
-}
-
-@keyframes growAnimation {
-  0% {
-    height: 600px;
-  }
-  100% {
-    height: 1000px;
-  }
-}
-
-/* Remove animation once completed and set size directly */
-.form-container-2.done {
-  animation: none;
-  height: 1000px;
-}
-
-.form-container-2.shrink {
-  height: 600px;
-}
-
-
-.test{
-  color: white;
-  font-size: 40px;
-}
-
-.test-id{
-  color: white;
-  background-color: red;
-  font-size: 40px;
-}
-
